syntax = "proto3";
option java_multiple_files = true;
option java_package = "sawtooth.sdk.protobuf";
option go_package = "pb";


message HandlerMessage {

    enum Type {
        DEFAULT = 0;
        HANDLER_REGISTER_REQUEST = 1;
        HANDLER_REGISTER_RESPONSE = 2;
        SIGN_REQUEST = 100;
        SIGN_RESPONSE = 101;
        VERIFY_REQUEST = 200;
        VERIFY_RESPONSE = 201;
        AGGREGATE_REQUEST = 300;
        AGGREGATE_RESPONSE = 301;
        GENERATE_THS_REQUEST = 400;
        GENERATE_THS_RESPONSE = 401;
    }

    Type type = 1;

    string correlation_id = 2;
    string handler_id = 3;
    bytes content = 4;

}
